test media with different sizes

--- a/src/app/modules/dashboard/pages/home/home.component.html
+++ b/src/app/modules/dashboard/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-container">
+<!-- <div class="home-container">
     <div class="home-details">
         <div class="title-container">
             <h3 class="text-muted">Bienvenido</h3>
@@ -12,4 +12,15 @@
                 src="assets/video/map-lights.gif">
         </div>
     </div>
+</div> -->
+
+<div class="media-container">
+    <!-- <img class="media lg" src="assets/video/Mapa-fondo_10.jpg"> -->
+    <video class="media lg" autoplay loop>
+        <source src="assets/video/Mapa-Coop-retails.mp4" type="video/mp4">
+    </video>
+
+    <video class="media md" autoplay loop>
+        <source src="assets/video/map-retailers.mp4" type="video/mp4">
+    </video>
 </div>
