--- a/src/app/modules/dashboard/pages/home/home.component.scss
+++ b/src/app/modules/dashboard/pages/home/home.component.scss
@@ -1,55 +1,90 @@
-.home-container {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin: 0 80px;
+// .home-container {
+//     align-items: center;
+//     display: flex;
+//     justify-content: center;
+//     margin: 0 80px;
 
-    @media screen and (max-width: 1260px) { 
-        margin: 0 40px;
+//     @media screen and (max-width: 1260px) { 
+//         margin: 0 40px;
+//     }
+
+//     .home-details {
+//         display: grid;
+//         grid-gap: 30px;
+//         grid-template-columns: 180px minmax(0, 1fr);
+    
+//         .title-container {
+//             display: flex;
+//             flex-direction: column;
+//             padding-top: 88px;
+//         }
+
+//         .media-container .media {
+//             height: calc(100vh - 144px);
+//         }
+
+//         @media screen and (max-width: 1260px) {
+//             grid-gap: 0px;
+//             grid-template-columns:  minmax(0, 1fr);
+           
+//             .title-container {
+//                 padding-top: 40px;
+//             }
+//         }
+    
+//         @media screen and (min-width: 980px) and (max-width: 1260px) {
+//             .media-container .media {
+//                 height: calc(100vh - 280px);
+//             }
+//         }
+    
+//         @media screen and (max-width: 979px) {
+//             .media-container .media {
+//                 height: auto;
+//                 width: 50vw;
+//             }
+//         }
+
+//         @media screen and (max-width: 767px) {
+//             .media-container .media {
+//                 width: 75vw;
+//                 height: auto;
+//             }
+//         }
+//     }
+// }
+
+@media screen and (max-width: 1024px){
+    .media-container {
+        align-items: center;
+        display: flex;
+        height: calc(100vh - 104px);
+        justify-content: center;  
+    }
+}
+
+.media {
+    height: auto;
+    width: calc(100vw - 260px);
+    
+    &.md {
+        display: none;
     }
 
-    .home-details {
-        display: grid;
-        grid-gap: 30px;
-        grid-template-columns: 180px minmax(0, 1fr);
-    
-        .title-container {
-            display: flex;
-            flex-direction: column;
-            padding-top: 88px;
+    @media screen and (max-width: 1024px){
+        &.lg {
+            display: none;
         }
 
-        .media-container .media {
-            height: calc(100vh - 144px);
+        &.md {
+            display: block;
         }
+        
+    }
 
-        @media screen and (max-width: 1260px) {
-            grid-gap: 0px;
-            grid-template-columns:  minmax(0, 1fr);
-           
-            .title-container {
-                padding-top: 40px;
-            }
-        }
-    
-        @media screen and (min-width: 980px) and (max-width: 1260px) {
-            .media-container .media {
-                height: calc(100vh - 280px);
-            }
-        }
-    
-        @media screen and (max-width: 979px) {
-            .media-container .media {
-                height: auto;
-                width: 50vw;
-            }
-        }
-
-        @media screen and (max-width: 767px) {
-            .media-container .media {
-                width: 75vw;
-                height: auto;
-            }
+    @media screen and (max-width: 767px){ 
+        &.md {
+            width: 80vw;
         }
     }
 }
