--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -15,7 +15,8 @@
                 <span class="h2 py-2 ml-3 mr-3">Campaña en el retail</span>
             </a>
         </li>
-        <li class="nav-item">
+        <!-- only visible for Brazil (id 2) and Mexico (id 9) -->
+        <li class="nav-item" *ngIf="countryID === 2 || countryID === 9">
             <a class="nav-link" [ngClass]="{'active bg-light' : activeTabView === 4}" (click)="activeTabView = 4">
                 <span class="h2 py-2 ml-3 mr-3">Google My Business</span>
             </a>
