--- a/src/app/modules/dashboard/components/google-business-filters/google-business-filters.component.scss
+++ b/src/app/modules/dashboard/components/google-business-filters/google-business-filters.component.scss
@@ -4,3 +4,8 @@
     height: 100%;
     justify-content: flex-end;
 }
+
+.text-muted small {
+    display: block;
+    margin-top: -1rem !important;
+}
