--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <!-- navbar navbar-top navbar-expand-md navbar-dark sticky-top -->
   <div class="container-fluid">
     <!-- Brand -->
-    <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active">
+    <a class="h4 mb-0 text-white text-uppercase d-lg-inline-block" routerLinkActive="active">
       <!-- {{ customTitle ? customTitle + (customSubtitle ? ' - ' + customSubtitle : '') : getTitleByRoute() }} -->
       {{ customTitle ? customTitle + (customSubtitle ? ' - ' + customSubtitle : '') : '' }}
     </a>
