--- a/src/app/modules/dashboard/components/charts/chart-bar-group/chart-bar-group.component.html
+++ b/src/app/modules/dashboard/components/charts/chart-bar-group/chart-bar-group.component.html
@@ -3,7 +3,15 @@
     <app-chart-loader [hidden]="status > 1"></app-chart-loader>
 
     <!-- ready -->
-    <div [ngClass]="{'chart-hidden': status !== 2}" [id]="chartID" style="height: 100%">
+    <div [ngClass]="{'chart-hidden': status !== 2 || chart?.data?.length < 1 }" [id]="chartID" style="height: 100%">
+    </div>
+
+    <!-- empty data -->
+    <div [hidden]="status !== 2 || chart?.data?.length > 0" class="chart-error-container text-muted">
+        <p class="text-center">
+            {{ 'general.withoutData' | translate }} <br>
+            {{ 'general.withoutData2' | translate }}
+        </p>
     </div>
 
     <!-- error -->
