add video for landscape lg

--- a/src/app/modules/dashboard/pages/home/home.component.html
+++ b/src/app/modules/dashboard/pages/home/home.component.html
@@ -17,7 +17,8 @@
 <div class="media-container">
     <!-- <img class="media lg" src="assets/video/Mapa-fondo_10.jpg"> -->
     <video class="media landscape" autoplay loop>
-        <source src="assets/video/map-retailers-landscape-v3.mp4" type="video/mp4">
+        <!-- <source src="assets/video/map-retailers-landscape-v3.mp4" type="video/mp4"> -->
+        <source src="assets/video/map-retailers-landscape-max.mp4" type="video/mp4">
     </video>
 
     <video class="media portrait" autoplay loop>
