--- a/src/app/modules/dashboard/components/indexed-wrapper/indexed-wrapper.component.html
+++ b/src/app/modules/dashboard/components/indexed-wrapper/indexed-wrapper.component.html
@@ -16,7 +16,7 @@
                 <span class="h4">Top sesiones por retailers</span>
             </div>
             <div class="card-body">
-                <app-chart-line-series [series]="topSessionsByRetailer" name="indexed-sessions-by-retailer">
+                <app-chart-line-series [series]="topSessionsByRetailer" name="indexed-sessions-by-retailer" yTitle="Sesiones">
                 </app-chart-line-series>
             </div>
         </div>
