--- a/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
+++ b/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
@@ -175,6 +175,7 @@
                 <div class="card-body">
                     <app-chart-line-series [series]="usersAndSalesBySector"
                         [valueName]="selectedTab3 === 1 ? 'Usuarios' : 'Ventas'"
+                        [yTitle]="selectedTab3 === 1 ? 'Usuarios' : 'Ventas'" 
                         [name]="selectedType + 'sales-users-by-sector'" [status]="usersAndSalesReqStatus">
                     </app-chart-line-series>
                 </div>
