--- a/src/app/modules/dashboard/components/indexed-wrapper/indexed-wrapper.component.html
+++ b/src/app/modules/dashboard/components/indexed-wrapper/indexed-wrapper.component.html
@@ -9,8 +9,8 @@
     </div>
 </div>
 
-<div class="row mt-5">
-    <div class="col-12">
+<div class="row mt-5" *ngIf="!retailerView">
+    <div class="col-12" *ngIf="latamView">
         <div class="pills-container">
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item">
@@ -27,10 +27,12 @@
     <div class="col-12 mt-4">
         <div class="card height-fluid">
             <div class="card-header">
-                <span class="h4">Sesiones por {{ selectedTab1 === 1 ? 'Países' : 'Retailers' }}</span>
+                <span class="h4" *ngIf="latamView">Sesiones por {{ selectedTab1 === 1 ? 'Países' : 'Retailers' }}</span>
+                <span class="h4" *ngIf="countryView">Sesiones por retailer</span>
             </div>
             <div class="card-body">
-                <app-chart-line-series [series]="sessions" name="indexed-sessions-by-retailer" yTitle="Sesiones">
+                <app-chart-line-series [series]="latamView ? sessions : sessionsByRetailer"
+                    name="indexed-sessions-by-retailer" yTitle="Sesiones">
                 </app-chart-line-series>
             </div>
         </div>
