disaggregate charts in overview-wrapper component

--- a/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
+++ b/src/app/modules/dashboard/components/overview-wrapper/overview-wrapper.component.html
@@ -37,11 +37,11 @@
                 </div>
                 <div class="card-body">
                     <div class="chart-legend mt-0 mb-2">
-                        <div class="legend-container">
+                        <div class="legend-container-hp">
                             <div class="legend-square on"></div>
                             <div class="legend-label">Activas</div>
                         </div>
-                        <div class="legend-container ml-3">
+                        <div class="legend-container-hp ml-3">
                             <div class="legend-square off"></div>
                             <div class="legend-label">Inactivas</div>
                         </div>
@@ -124,7 +124,7 @@
         </div>
 
         <!-- devices -->
-        <div class="col-12 col-md-6 mt-4">
+        <!-- <div class="col-12 col-md-6 mt-4">
             <div class="card">
                 <div class="card-header">
                     <span class="h4">{{selectedTab2 === 1 ? 'Tráfico' : 'Ventas'}} por dispositivos</span>
@@ -135,10 +135,53 @@
                     </app-chart-pictorial>
                 </div>
             </div>
+        </div> -->
+
+        <div class="col-12 col-md-6 mt-4">
+            <div class="card height-fluid">
+                <div class="card-header">
+                    <span class="h4">
+                        {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
+                        ('overviewLatam.chart2CardTitle1' | translate) }}
+                    </span>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 col-xl-6 mt-5 mt-xl-0">
+                            <div class="chart-legend legend-center mt-0">
+                                <div class="legend-container" *ngIf="trafficAndSales?.deviceDesktop?.length > 0">
+                                    <div class="legend-square on color-1"></div>
+                                    <div class="legend-label">Desktop {{ trafficAndSales.deviceDesktop[1].value }}%
+                                    </div>
+                                </div>
+                            </div>
+                            <app-chart-pictorial [data]="trafficAndSales?.deviceDesktop"
+                                [name]="selectedType + 'device-desktop'" [uniqueDimensionConf]="{color: '#67B6DC'}"
+                                category="name" iconType="monitor" [status]="trafficSalesReqStatus[0].reqStatus"
+                                height="280px">
+                            </app-chart-pictorial>
+                        </div>
+                        <div class="col-12 col-xl-6 mt-5 mt-xl-0">
+                            <div class="chart-legend legend-center mt-0">
+                                <div class="legend-container" *ngIf="trafficAndSales?.deviceMobile?.length > 0">
+                                    <div class="legend-square on color-2"></div>
+                                    <div class="legend-label">Mobile {{ trafficAndSales.deviceMobile[1].value }}%
+                                    </div>
+                                </div>
+                            </div>
+                            <app-chart-pictorial [data]="trafficAndSales?.deviceMobile"
+                                [name]="selectedType + 'device-mobile'" [uniqueDimensionConf]="{color: '#6794DC'}"
+                                category="name" iconType="cellphone" height="280px"
+                                [status]="trafficSalesReqStatus[0].reqStatus">
+                            </app-chart-pictorial>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- gender -->
-        <div class="col-12 col-md-6 mt-4">
+        <!-- <div class="col-12 col-md-6 mt-4">
             <div class="card">
                 <div class="card-header">
                     <span class="h4">{{selectedTab2 === 1 ? 'Tráfico' : 'Ventas'}} por Género</span>
@@ -149,7 +192,55 @@
                     </app-chart-pictorial>
                 </div>
             </div>
+        </div> -->
+
+        <div class="col-12 col-md-6 mt-4">
+            <div class="card height-fluid">
+                <div class="card-header">
+                    <span class="h4">
+                        {{ ((selectedTab2 === 1 ? 'general.traffic' : 'general.sales') | translate) +
+                        ('overviewLatam.chart3CardTitle1' | translate) }}
+                    </span>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 col-xl-6 mt-5 mt-xl-0">
+                            <div class="chart-legend legend-center mt-0">
+                                <div class="legend-container" *ngIf="trafficAndSales?.genderMan?.length > 0">
+                                    <div class="legend-square on color-1"></div>
+                                    <div class="legend-label">
+                                        {{ ('others.men'| translate) + ' '}}
+                                        {{ trafficAndSales.genderMan[1].value }}%
+                                    </div>
+                                </div>
+                            </div>
+                            <app-chart-pictorial [data]="trafficAndSales?.genderMan"
+                                [name]="selectedType + 'gender-man'" [uniqueDimensionConf]="{color: '#67B6DC'}"
+                                category="name" iconType="man" [status]="trafficSalesReqStatus[1].reqStatus"
+                                height="280px">
+                            </app-chart-pictorial>
+                        </div>
+                        <div class="col-12 col-xl-6 mt-5 mt-xl-0">
+                            <div class="chart-legend legend-center mt-0">
+                                <div class="legend-container" *ngIf="trafficAndSales?.genderWoman?.length > 0">
+                                    <div class="legend-square on color-2"></div>
+                                    <div class="legend-label">
+                                        {{ ('others.women'| translate) + ' '}}
+                                        {{ trafficAndSales.genderWoman[1].value }}%
+                                    </div>
+                                </div>
+                            </div>
+                            <app-chart-pictorial [data]="trafficAndSales?.genderWoman"
+                                [name]="selectedType + 'gender-woman'" [uniqueDimensionConf]="{color: '#6794DC'}"
+                                category="name" iconType="woman" height="280px"
+                                [status]="trafficSalesReqStatus[1].reqStatus">
+                            </app-chart-pictorial>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
 
         <!-- age -->
         <div class="col-12 col-md-6 mt-4">
