--- a/src/app/modules/dashboard/components/indexed-wrapper/indexed-wrapper.component.html
+++ b/src/app/modules/dashboard/components/indexed-wrapper/indexed-wrapper.component.html
@@ -15,11 +15,11 @@
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item">
                     <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 1}"
-                        (click)="getSessions('country');">Sesiones por Países</a>
+                        (click)="getSessions('country');">Tráfico por Países</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 2}"
-                        (click)="getSessions('retailer')">Sesiones por Retailers</a>
+                        (click)="getSessions('retailer')">Tráfico por Retailers</a>
                 </li>
             </ul>
         </div>
@@ -27,12 +27,12 @@
     <div class="col-12 mt-4">
         <div class="card height-fluid">
             <div class="card-header">
-                <span class="h4" *ngIf="latamView">Sesiones por {{ selectedTab1 === 1 ? 'Países' : 'Retailers' }}</span>
-                <span class="h4" *ngIf="countryView">Sesiones por retailer</span>
+                <span class="h4" *ngIf="latamView">Tráfico por {{ selectedTab1 === 1 ? 'Países' : 'Retailers' }}</span>
+                <span class="h4" *ngIf="countryView">Tráfico por retailer</span>
             </div>
             <div class="card-body">
                 <app-chart-line-series [series]="latamView ? sessions : sessionsByRetailer"
-                    name="indexed-sessions-by-retailer" yTitle="Sesiones">
+                    name="indexed-sessions-by-retailer" yTitle="Tráfico">
                 </app-chart-line-series>
             </div>
         </div>
