--- a/src/app/modules/dashboard/pages/home/home.component.scss
+++ b/src/app/modules/dashboard/pages/home/home.component.scss
@@ -1,120 +1,57 @@
-// .home-container {
-//     align-items: center;
-//     display: flex;
-//     justify-content: center;
-//     margin: 0 80px;
-
-//     @media screen and (max-width: 1260px) { 
-//         margin: 0 40px;
-//     }
-
-//     .home-details {
-//         display: grid;
-//         grid-gap: 30px;
-//         grid-template-columns: 180px minmax(0, 1fr);
-    
-//         .title-container {
-//             display: flex;
-//             flex-direction: column;
-//             padding-top: 88px;
-//         }
-
-//         .media-container .media {
-//             height: calc(100vh - 144px);
-//         }
-
-//         @media screen and (max-width: 1260px) {
-//             grid-gap: 0px;
-//             grid-template-columns:  minmax(0, 1fr);
-           
-//             .title-container {
-//                 padding-top: 40px;
-//             }
-//         }
-    
-//         @media screen and (min-width: 980px) and (max-width: 1260px) {
-//             .media-container .media {
-//                 height: calc(100vh - 280px);
-//             }
-//         }
-    
-//         @media screen and (max-width: 979px) {
-//             .media-container .media {
-//                 height: auto;
-//                 width: 50vw;
-//             }
-//         }
-
-//         @media screen and (max-width: 767px) {
-//             .media-container .media {
-//                 width: 75vw;
-//                 height: auto;
-//             }
-//         }
-//     }
-// }
-
-// V2
 
 .media-container {
     max-height: calc(100vh - 64px);
-}
-
-@media screen and (max-width: 1024px){
-    .media-container {
-        align-items: center;
-        display: flex;
-        height: calc(100vh - 104px);
-        justify-content: center;  
-    }
-}
-
-.media {
-    height: auto;
-    width: calc(100vw - 250px);
-
-    
-    &.portrait {
-        display: none;
-    }
 
     @media screen and (max-width: 1024px){
-        &.landscape {
-            display: none !important;
-        }
+            align-items: center;
+            display: flex;
+            height: calc(100vh - 104px);
+            justify-content: center;  
+    }
 
+
+    .media {
+        height: auto;
+        width: 100%;
+    
         &.portrait {
-            display: block;
-            width: calc(100vw - 260px);
-            height: inherit;
-        }
-        
-    }
-
-    @media screen and (max-width: 767px){ 
-        &.portrait {
-            width: 80vw;
-        }
-    }
-
-    @media screen and (min-width: 1636px){ 
-        width: calc(100vw - 260px);
-    }
-
-    @media screen and (max-width: 1635px){ 
-        &.landscape.md {
-            display: block;
-        }
-        &.landscape.lg {
             display: none;
+            height: calc(100vh - 64px);
         }
-    }
-    @media screen and (min-width: 1636px){ 
-        &.landscape.md {
-            display: none;
+
+        @media screen and (max-width: 1024px){
+            &.landscape {
+                display: none !important;
+            }
+    
+            &.portrait {
+                display: block;
+            }
         }
-        &.landscape.lg {
-            display: block;
+    
+        @media screen and (max-width: 767px){ 
+            &.portrait {
+                width: 80vw;
+                height: auto;
+            }
         }
-    }
+    
+    
+        @media screen and (max-width: 1635px){ 
+            &.landscape.md {
+                display: block;
+            }
+            &.landscape.lg {
+                display: none;
+            }
+        }
+        @media screen and (min-width: 1636px){ 
+            &.landscape.md {
+                display: none;
+            }
+            &.landscape.lg {
+                display: block;
+            }
+        }
+    }    
 }
